Fixed homepage container inconsistency on small screen such as mobile devices

--- a/_sass/site.scss
+++ b/_sass/site.scss
@@ -83,7 +83,8 @@ body {
 	box-shadow: 0 0 10px 0 rgba($color_shark,0.3);
 	@include transition(.5s);
 	@media #{$small} {
-		width: 100%;
+		//width: 100%;
+		width: 90%;
 	    box-shadow: none;
 	}
 	@media #{$medium} {
